added some more styles to the webpage, and modified webpack, added btn file

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,8 +1,6 @@
-$main: red;
-body {
-    background: $main;
+@import 'normalize.css';
+@import 'base/_global';
+@import 'base/_variables';
+@import 'modules/_btn';
+@import 'modules/_large-hero';
 
-    h2 {
-        color: blue;   
-    }
-}
