--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -10,7 +10,10 @@
     }
 
     &--lrg {
-        font-size: 1.25rem;
         padding: 1.1rem 1.9rem;
+
+        @mixin atLarge {
+            font-size: 1.25rem;
+        }
     }
 }
