--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -1,6 +1,11 @@
 .large-hero {
     position: relative;
+    border-bottom: 10px solid $mainBlue;
     
+    &__img {
+        display: block;
+    }
+
     &__text-content {
         position: absolute;
         top: 50%;
@@ -15,7 +20,7 @@
         font-weight: 300;
         color: $mainBlue;
         margin: 0;
-        font-size: 1.1rem;
+        font-size: 2.4rem;
 
         @mixin atSmall {
             font-size: 4.8rem;
@@ -25,7 +30,7 @@
     &__subtitle {
         font-weight: 300;
         color: $mainBlue;
-        font-size: 1rem;
+        font-size: 1.5rem;
         margin: 0;
 
         @mixin atSmall {
@@ -36,10 +41,14 @@
 
     &__description {
         color: white;
-        font-size: 1.875rem;
         font-weight: 100;
         text-shadow: 2px 2px 0 rgba(0,0,0,.2);
         max-width: 30rem;
         margin: 0 auto;
+        font-size: 1.1rem;
+
+        @mixin atSmall {
+            font-size: 1.875rem;
+        }
     }
 }
