--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -4,4 +4,9 @@
 @import 'base/_mixins';
 @import 'modules/_btn';
 @import 'modules/_large-hero';
+@import 'modules/_page-section';
+@import 'modules/_wrapper';
+@import 'modules/_headline';
+
+
 
