--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -9,7 +9,15 @@
         padding-right: 65px;
     }
 
+    &__mb {
+        margin-bottom: 1rem;
+    }
+
     @mixin atMedium {
+        &__mb {
+            margin-bottom: 0;
+        }
+
         &__medium-4 {
             float: left;
             width: 33.33%;
