--- a/app/assets/styles/modules/_feature-item.css
+++ b/app/assets/styles/modules/_feature-item.css
@@ -1,18 +1,40 @@
 .feature-item {
-    padding-left: 94px;
     position: relative;
     padding-bottom: 2.5rem;
 
+    @mixin atSmall {
+        padding-left: 94px;
+
+    }
+    
     &__icon {
-        position: absolute;
-        left: 0;
+        display: block;
+        margin: 0 auto;
+
+        @mixin atSmall {
+            position: absolute;
+            left: 0;
+        }
     }
 
     &__title {
-        font-size: 1.875rem;
         font-weight: 300;
-        margin-bottom: .8rem;
+        margin: .7em 0 .8rem;
+        font-size: 1.6rem;
+        text-align: center;
+
+        @mixin atSmall {
+            margin-top: 1em;
+            font-size: 1.875rem;
+            text-align: left;
+        }
     }
 
+    p {
+        text-align: center;
 
+        @mixin atSmall {
+            text-align: left;
+        }
+    }
 }
