--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -1,7 +1,5 @@
 .page-section {
     padding: 1.2rem 0;
-    max-width: 1200px;
-    margin: 0 auto;
 
     @mixin atMedium {
         padding: 4.5rem 0;
@@ -11,6 +9,11 @@
     &--blue {
         background-color: $mainBlue;
         color: white;
-        max-width: 100%;
+        
+    }
+
+    &--testimonials {
+        background: url('assets/images/testimonials-bg.jpg') top center no-repeat;
+        background-size: cover;
     }
 }
