--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -15,10 +15,16 @@
         display: block;
         margin: 0 auto .6rem;
         @mixin atSmall {
+            position: relative;
+            top: 8px;
             margin-right: .5rem;
             margin-left: 0;
             display: inline;
             margin-bottom: 0;
         }
+    }
+
+    &--blue {
+        color: $mainBlue;
     }
 }
