--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -11,6 +11,8 @@
 @import 'modules/_generic-content';
 @import 'modules/_section-title';
 @import 'modules/_feature-item';
+@import 'modules/_testimonial';
+
 
 
 
