--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -16,6 +16,14 @@
         }
     }
 
+    &--p0 {
+      padding: 0;
+      
+      @mixin atLarge {
+        padding: 0 18px;  
+      }
+    }
+
     .wrapper{
         padding: 0;
     }
