--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -12,8 +12,20 @@
         
     }
 
+    &--pb{
+        padding-bottom: 0;
+        @mixin atLarge {
+            padding-bottom: 4.5rem;
+        }
+    }
+
     &--testimonials {
-        background: url('assets/images/testimonials-bg.jpg') top center no-repeat;
-        background-size: cover;
+        background-color: #e0e6ef;
+
+        @mixin atLarge {
+            background: url('assets/images/testimonials-bg.jpg') top center no-repeat;
+            background-size: cover;    
+        }
+        
     }
 }
