--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,12 +1,20 @@
 .row {
     @mixin clearfix;
 
+    &--pt {
+        padding-top: 80px;
+    }
+
     &--gutters {
         margin-right: -65px;
     }
 
     &--gutters-lrg {
         margin-right: -100px;
+    }
+
+    &--gutters-small {
+        margin-right: -45px;
     }
 
     &--gutters > div {
@@ -17,11 +25,15 @@
         padding-right: 100px;
     }
 
+    &--gutters-small > div {
+        padding-right: 45px;
+    }
+
     &__mb {
         margin-bottom: 1rem;
     }
 
-    @mixin atMedium {
+    @mixin atLarge {
         &__mb {
             margin-bottom: 0;
         }
@@ -47,6 +59,17 @@
 
         &__medium-4--small {
             width: 63%;
+        }
+    }
+
+    &--equal-height{
+        @mixin atLarge {
+            display: flex;
+        }
+
+        & > div {
+            float: none;
+            display: flex;
         }
     }
     
