started styling the site header

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -12,7 +12,10 @@
 @import 'modules/_section-title';
 @import 'modules/_feature-item';
 @import 'modules/_testimonial';
+@import 'modules/_site-header';
+@import 'modules/_main-nav';
 @import 'modules/_site-footer';
+
 
 
 
