--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -3,7 +3,11 @@
     width: 100%;
     position: absolute;
     z-index: 2;
-    background-color: rgba($mainBlue,.3);
+
+    @mixin atMedium {
+        background-color: rgba($mainBlue,.3);
+        
+    }
 
     &__btn {
         float: right;
@@ -14,6 +18,35 @@
         position: absolute;
         top: 0;
         background-color: $mainBlue;
-        padding: 25px 36px;
+        padding: 15px 30px;
+        left: 50%;
+        transform: translateX(-50%);
+
+        @mixin atMedium {
+            padding: 25px 36px;
+            left: auto;
+            transform: translateX(0);
+        }
+    }
+
+    &__menu-icon{
+        width: 20px;
+        height: 20px;
+        background-color: white;
+        position: absolute;
+        right: 10px;
+        top: 10px;
+
+        @mixin atMedium {
+            display: none;
+        }
+    }
+
+    &__menu-content{
+        display: none;
+
+        @mixin atMedium {
+            display: block;
+        }
     }
 }
