--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -1,8 +1,9 @@
 .site-header {
-    padding-top: 10px 0;
+    padding: 10px 0;
     width: 100%;
     position: absolute;
     z-index: 2;
+    transition: background-color .3s ease-out;
 
     @mixin atMedium {
         background-color: rgba($mainBlue,.3);
@@ -10,8 +11,12 @@
     }
 
     &__btn {
-        float: right;
-        margin: 5px 0;
+
+        @mixin atMedium {
+            float: right;
+            margin: 5px 0;    
+        }
+        
     }
 
     &__logo {
@@ -31,22 +36,90 @@
 
     &__menu-icon{
         width: 20px;
-        height: 20px;
-        background-color: white;
+        height: 19px;
         position: absolute;
+        z-index: 10;
         right: 10px;
         top: 10px;
+
+        &::after, &__middle, &::before {
+            position: absolute;
+            left: 0;
+            width: 100%;
+            height: 3px;
+            background-color: white;
+            transition: all .3s ease-in-out;
+        }
+
+        &::before {
+            content: '';
+            top: 0;
+            transform-origin: 0 0;
+        }
+
+        &__middle {
+            top: 8px;
+            transform-origin: 0 50%;
+        }
+
+        &::after {
+            content: '';
+            bottom: 0;
+            transform-origin: 0 100%;
+        }
+
+        &--close {
+            &::before {
+                transform: rotate(45deg) scaleX(1.25);
+            }
+
+            .site-header__menu-icon__middle {
+                opacity: 0;
+                transform: scale(0);
+            }
+
+            &::after {
+                transform: rotate(-45deg) scaleX(1.25) translateY(1px);
+            }
+
+
+        }
+
 
         @mixin atMedium {
             display: none;
         }
+
+        
     }
 
     &__menu-content{
-        display: none;
+        transform: scale(1.2);
+        opacity: 0;
+        z-index: -10;
+        position: relative;
+        padding-top: 110px;
+        text-align: center;
+        transition: all .3s ease-out;
+
+        &--visible {
+            opacity: 1;
+            z-index: 1;
+            transform: scale(1);
+        }
 
         @mixin atMedium {
-            display: block;
+            transform: scale(1);
+            opacity: 1;
+            z-index: 1;
+            padding-top: 0;
+
         }
     }
+
+    &--expanded {
+        background-color: rgba($mainBlue,.55);
+    }
+
+
 }
