--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -6,9 +6,15 @@
     transition: background-color .3s ease-out;
 
     @mixin atMedium {
+        position: fixed;
         background-color: rgba($mainBlue,.3);
         
+        &--dark {
+            background-color: rgba(23,51,72,.85);
+        }
     }
+
+    
 
     &__btn {
 
@@ -26,11 +32,17 @@
         padding: 15px 30px;
         left: 50%;
         transform: translateX(-50%);
+        transition: all .3s ease-out;
 
         @mixin atMedium {
             padding: 25px 36px;
             left: auto;
             transform: translateX(0);
+
+            .site-header--dark &{
+                transform: scale(.57);
+                top: -20px;
+            }
         }
     }
 
